@@ -6,6 +6,9 @@ This file lists the changes in each six version.
 1.2.0
 -----
 
+- Issue #13: Make iterkeys/itervalues/iteritems return iterators on Python 3
+  instead of iterables.
+
 - Issue #11: Fix maxsize support on Jython.
 
 - Add six.next() as an alias for six.advance_iterator().
